Hidden elements and css

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <header class="header">
     <!--This is the menu burger-->
     <nav class="header__element menu-burger">
-        <div class="menu-burger__line"></div>
-        <div class="menu-burger__line"></div>
-        <div class="menu-burger__line"></div>
+        <div hidden="hidden" class="menu-burger__line"></div>
+        <div hidden="hidden" class="menu-burger__line"></div>
+        <div hidden="hidden" class="menu-burger__line"></div>
     </nav>
 
     <!--This is the logotype-->
