--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <!-- This is the block navigation -->
         <nav class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__item navigation__item--active"><a href="#" class="navigation__link navigation__link--active">Ремонтируемые
+                <li class="navigation__item navigation__item--active"><a href="#"
+                                                                         class="navigation__link navigation__link--active">Ремонтируемые
                     бренды</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Ремонтируемые устройства</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Цены на услуги</a></li>
