--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>1.3 Maket</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_320.css">
+    <link rel="stylesheet" href="style_768.css">
+    <link rel="stylesheet" href="style_1120.css">
     <link rel="stylesheet" href="fonts/stylesheet.css">
 </head>
 <body>
