--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>1.3 Maket</title>
-    <link rel="stylesheet" href="style_320.css">
-    <link rel="stylesheet" href="style_768.css">
-    <link rel="stylesheet" href="style_1120.css">
-    <link rel="stylesheet" href="fonts/stylesheet.css">
+    <link rel="stylesheet" href="style.css">
+<!--    <link rel="stylesheet" href="style_320.css">-->
+<!--    <link rel="stylesheet" href="style_768.css">-->
+<!--    <link rel="stylesheet" href="style_1120.css">-->
+<!--    <link rel="stylesheet" href="fonts/stylesheet.css">-->
 </head>
 <body>
 <!--This is the header-->
@@ -30,12 +31,15 @@
             <!--This is the menu list-->
             <li class="menu__item menu__item--hidden-link"><a href="#"
                                                               class="menu__link menu__link--call">Позвонить</a></li>
-            <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--write">Написать</a>
+            <li class="menu__item menu__item--hidden-link"><a href="#"
+                                                              class="menu__link menu__link--write">Написать</a>
             </li>
-            <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--login">Логин</a>
+            <li class="menu__item menu__item--hidden-link"><a href="#"
+                                                              class="menu__link menu__link--login">Логин</a>
             </li>
         </ul>
     </nav>
+
 
     <!--This is the second menu-->
     <nav class="menu menu--secondary">
@@ -47,6 +51,7 @@
                 заявку</a></li>
         </ul>
     </nav>
+
 
 </header>
 <!--This is the main content-->
