--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>1.3 Maket</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_320.css">
-    <link rel="stylesheet" href="style_768.css">
-    <link rel="stylesheet" href="style_1120.css">
+    <!--    <link rel="stylesheet" href="style_768.css">-->
+    <!--    <link rel="stylesheet" href="style_1120.css">-->
     <link rel="stylesheet" href="fonts/stylesheet.css">
 </head>
 <body>
@@ -69,7 +69,7 @@
         <h1 class="main__title">Услуги и сервисы</h1>
         <nav class="main__menu menu menu--secondary">
             <!-- Меню -->
-            <ul class="menu__list">
+            <ul hidden="hidden" class="menu__list">
                 <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status">Статус
                     ремонта</a></li>
                 <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--application">Отправить
@@ -105,9 +105,17 @@
                 </p>
                 <!-- Скрытый текст -->
                 <p class="article__text article__text--hidden text">
-                    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера<span class="text-hidden",
-                    что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам
-                    обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</span>
+                    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера<span class="text-hidden" ,
+                                                                                                  что подтверждает
+                                                                                                  большое количество
+                                                                                                  постоянных клиентов.
+                                                                                                  Мы гордимся тем, что к
+                                                                                                  нам
+                                                                                                  обращаются по
+                                                                                                  рекомендациям и, в
+                                                                                                  свою очередь, советуют
+                                                                                                  нас родным и
+                                                                                                  близким.</span>
                 </p>
                 <!-- Кнопка "Читать далее" -->
                 <button type="button" class="article__button button_read-more">Читать далее</button>
