--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>1.3 Maket</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_320.css">
-    <!--    <link rel="stylesheet" href="style_768.css">-->
+    <link rel="stylesheet" href="style_768.css">
     <!--    <link rel="stylesheet" href="style_1120.css">-->
     <link rel="stylesheet" href="fonts/stylesheet.css">
 </head>
