--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_320.css">
     <link rel="stylesheet" href="style_768.css">
-    <!--    <link rel="stylesheet" href="style_1120.css">-->
+    <link rel="stylesheet" href="style_1120.css">
     <link rel="stylesheet" href="fonts/stylesheet.css">
 </head>
 <body>
@@ -69,7 +69,7 @@
         <h1 class="main__title">Услуги и сервисы</h1>
         <nav class="main__menu menu menu--secondary">
             <!-- Меню -->
-            <ul hidden="hidden" class="menu__list">
+            <ul  class="menu__list">
                 <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status">Статус
                     ремонта</a></li>
                 <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--application">Отправить
@@ -105,7 +105,7 @@
                 </p>
                 <!-- Скрытый текст -->
                 <p class="article__text article__text--hidden text">
-                    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера<span class="text-hidden" ,
+                    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера<span class="text-hidden"> ,
                                                                                                   что подтверждает
                                                                                                   большое количество
                                                                                                   постоянных клиентов.
