--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- Бургер-меню -->
     <div class="header__wrapper header__wrapper-burger wrapper">
         <nav class="header__element menu-burger">
+            <!--Возможный контент бургер меню-->
             <div hidden class="menu-burger__line"></div>
             <div hidden class="menu-burger__line"></div>
             <div hidden class="menu-burger__line"></div>
@@ -105,17 +106,19 @@
                 </p>
                 <!-- Скрытый текст -->
                 <p class="article__text article__text--hidden text">
-                    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера<span class="text-hidden"> ,
-                                                                                                  что подтверждает
-                                                                                                  большое количество
-                                                                                                  постоянных клиентов.
-                                                                                                  Мы гордимся тем, что к
-                                                                                                  нам
-                                                                                                  обращаются по
-                                                                                                  рекомендациям и, в
-                                                                                                  свою очередь, советуют
-                                                                                                  нас родным и
-                                                                                                  близким.</span>
+                    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера
+                    <!--Скрытый элемент текста-->
+                    <span class="text-hidden"> ,
+                        что подтверждает
+                        большое количество
+                        постоянных клиентов.
+                        Мы гордимся тем, что к
+                        нам
+                        обращаются по
+                        рекомендациям и, в
+                        свою очередь, советуют
+                        нас родным и
+                        близким.</span>
                 </p>
                 <!-- Кнопка "Читать далее" -->
                 <button type="button" class="article__button button_read-more">Читать далее</button>
