--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
 <!-- Это верхняя часть страницы -->
 <header class="header">
     <!-- Бургер-меню -->
-    <div class="header__wrapper header__wrapper-burger wrapper">
+    <div class="header__wrapper wrapper">
         <nav class="header__element menu-burger">
-            <!--Возможный контент бургер меню-->
+            <!-- Возможный контент бургер меню -->
             <div hidden class="menu-burger__line"></div>
             <div hidden class="menu-burger__line"></div>
             <div hidden class="menu-burger__line"></div>
         </nav>
         <!-- Разделитель -->
-        <div class="header__element header__deliver--hidden deliver"></div>
-
-
+        <div class="header__deliver header__deliver--hidden"></div>
     </div>
 
 
@@ -37,27 +35,20 @@
         <nav class="menu menu--primary">
             <ul class="menu__list">
                 <!-- Элементы первого меню -->
-                <li class="menu__item menu__item--hidden-link"><a href="#"
-                                                                  class="menu__link menu__link--call">Позвонить</a></li>
-                <li class="menu__item menu__item--hidden-link"><a href="#"
-                                                                  class="menu__link menu__link--write">Написать</a>
-                </li>
-                <li class="menu__item menu__item--hidden-link"><a href="#"
-                                                                  class="menu__link menu__link--login">Логин</a>
-                </li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--call"><span>Позвонить</span></a></li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--write"><span>Написать</span></a></li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--login"><span>Логин</span></a></li>
             </ul>
         </nav>
         <!-- Разделитель -->
-        <div class="header__deliver  deliver"></div>
+        <div class="menu__deliver  deliver"></div>
 
         <!-- Второе меню -->
         <nav class="menu menu--secondary">
             <!-- Элементы второго меню -->
             <ul class="menu__list">
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status">Статус
-                    ремонта</a></li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--application">Отправить
-                    заявку</a></li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status"><span>Статус ремонта</span></a></li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--application"><span>Отправить заявку</span></a></li>
             </ul>
         </nav>
     </div>
@@ -71,10 +62,10 @@
         <nav class="main__menu menu menu--secondary">
             <!-- Меню -->
             <ul  class="menu__list">
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status">Статус
-                    ремонта</a></li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--application">Отправить
-                    заявку</a></li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status"><span>Статус
+                    ремонта</span></a></li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--application"><span>Отправить
+                    заявку</span></a></li>
             </ul>
         </nav>
         <!-- Навигация -->
