--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
         <nav class="menu menu--primary">
             <ul class="menu__list">
                 <!-- Элементы первого меню -->
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--call"><span>Позвонить</span></a></li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--write"><span>Написать</span></a></li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--login"><span>Логин</span></a></li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--call"><span>Позвонить</span></a>
+                </li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--write"><span>Написать</span></a>
+                </li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--login"><span>Логин</span></a>
+                </li>
             </ul>
         </nav>
         <!-- Разделитель -->
@@ -47,8 +50,11 @@
         <nav class="menu menu--secondary">
             <!-- Элементы второго меню -->
             <ul class="menu__list">
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status"><span>Статус ремонта</span></a></li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--application"><span>Отправить заявку</span></a></li>
+                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status"><span>Статус ремонта</span></a>
+                </li>
+                <li class="menu__item menu__item--hidden-link"><a href="#"
+                                                                  class="menu__link menu__link--application"><span>Отправить заявку</span></a>
+                </li>
             </ul>
         </nav>
     </div>
@@ -61,10 +67,11 @@
         <h1 class="main__title">Услуги и сервисы</h1>
         <nav class="main__menu menu menu--secondary">
             <!-- Меню -->
-            <ul  class="menu__list">
+            <ul class="menu__list">
                 <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--status"><span>Статус
                     ремонта</span></a></li>
-                <li class="menu__item menu__item--hidden-link"><a href="#" class="menu__link menu__link--application"><span>Отправить
+                <li class="menu__item menu__item--hidden-link"><a href="#"
+                                                                  class="menu__link menu__link--application"><span>Отправить
                     заявку</span></a></li>
             </ul>
         </nav>
