--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div hidden class="menu-burger__line"></div>
         </nav>
         <!-- Разделитель -->
-        <div class="header__deliver header__deliver--hidden"></div>
+        <div class="header__deliver header__deliver--hidden deliver"></div>
     </div>
 
 
@@ -44,7 +44,7 @@
             </ul>
         </nav>
         <!-- Разделитель -->
-        <div class="menu__deliver  deliver"></div>
+        <div class="menu__deliver menu__deliver--hidden  deliver"></div>
 
         <!-- Второе меню -->
         <nav class="menu menu--secondary">
@@ -63,7 +63,7 @@
 </header>
 <!-- Основное содержимое страницы -->
 <main class="main">
-    <section>
+    <header>
         <h1 class="main__title">Услуги и сервисы</h1>
         <nav class="main__menu menu menu--secondary">
             <!-- Меню -->
@@ -81,14 +81,17 @@
                 <li class="navigation__item navigation__item--active"><a href="#"
                                                                          class="navigation__link navigation__link--active">Ремонтируемые
                     бренды</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link navigation__link-hidden">Дополнительные
+                    услуги</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Ремонтируемые устройства</a></li>
+
                 <li class="navigation__item"><a href="#" class="navigation__link">Цены на услуги</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Адреса сервисных центров</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Специальные цены</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Отзывы</a></li>
             </ul>
         </nav>
-    </section>
+    </header>
     <section>
         <!-- Содержимое второй секции -->
         <h2 hidden>Это главная секция</h2>
