--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="header__element logo">
         <img src="image/Grouplogotype.svg" alt="logotype" class="logo__logotype">
     </div>
-    <div class="header__wrapper header__wrapper-menu wrapper">
+    <div class="header__wrapper header__wrapper-menu header__wrapper-menu--pozition wrapper">
         <!-- Первое меню -->
         <nav class="menu menu--primary">
             <ul class="menu__list">
